--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-python-telegram-bot==20.7
+python-telegram-bot>=21.0
 mysql-connector-python==8.1.0
 requests==2.31.0
+openpyxl>=3.1.2
+python-dotenv>=1.0.0
